welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:18: error: not found: value i
			lastValue = nums(i); 
                                         ^