welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	
	var isNotTriple = true;
	var lastValue = nums(0);
	if(nums.length >= 3)
	{
		for(i <- 1 to nums.length - 1)
		{
			if(nums(i) == lastValue && i != nums.length - 1)
			{
				if(nums(i+1) == lastValue)
				{
					isNotTriple = false;
				}
			}
		}
		
			lastValue = nums(i); 
	}
	
	return isNotTriple;

}

// Pareil mais pour des nombres ne se suivant pas 
/* 	var isNotTriple = true;
	var maxVal = nums(0);
	
	for(i <- 0 to nums.length - 1)
	{
		if(nums(i) > maxVal)
		{
			maxVal = nums(i);
		}
	}
	
	var countTable = new Array[Int](maxVal + 1);
	
	for(i <- 0 to countTable.length - 1)
	{
		countTable(i) = 0;	
	}
	
	for(i <- 0 to nums.length - 1)
	{
		countTable(nums(i)) = countTable(nums(i)) + 1;	
	}

	
	for(i <- 0 to countTable.length - 1)
	{
		if(countTable(i) >= 3)
		{
			isNotTriple = false;	
		}
	}
	return isNotTriple;

	*/